tests/idris2/interface026/expected
1/1: Building UninhabitedRec (UninhabitedRec.idr)
Error: While processing right hand side of lkup3Bad. Can't find an implementation for Lookup 3 [(1, "one"), (2, "two"), (4, "four")].

UninhabitedRec:30:12--30:21
 26 | lkup2Good : String
 27 | lkup2Good = fff xxs 2
 28 | 
 29 | lkup3Bad : String
 30 | lkup3Bad = fff xxs 3
                 ^^^^^^^^^

Error: While processing right hand side of uniqBad. Can't find an implementation for Uninhabited (Elem 1 (toList [2, 1])).

UninhabitedRec:49:11--49:12
 45 | uniqGood : Uniq Nat
 46 | uniqGood = [1, 2, 3]
 47 | 
 48 | uniqBad : Uniq Nat
 49 | uniqBad = [1, 2, 1]
                ^

UninhabitedRec> Bye for now!
